<resources>
    <string name="app_name">FlorentSALOU_Toolbox</string>
    <string name="title_activity_login">Connexion</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Identifiant</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Valider</string>
    <string name="action_sign_in_short">Valider</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_home">Bonjour</string>
    <string name="CycleVie">Cycle de vie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valider">Valider</string>
    <string name="textview">TextView</string>
    <string name="changer_fragment">Changer fragment</string>
    <string name="cycle_de_vie">Cycle de vie:</string>
    <string name="random_contact">Random contact</string>
    <string name="permissions">Permissions</string>
    <string name="bonjour">Bonjour</string>
    <string name="sauvegarde">Sauvegarde</string>
    <string name="webservices">Webservices</string>
    <string name="info_tel">Info tel</string>
    <string name="gps_loading">GPS Loading</string>
    <string name="pr_nom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="jj_mm_aaa">JJ/MM/AAA</string>
    <string name="lire_fichier">Lire fichier</string>
</resources>
