<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SavingActivity" android:id="@+id/saved">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/firstname" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintVertical_chainStyle="spread" android:hint="@string/pr_nom"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/firstname"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:hint="@string/nom" android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/save"/>
    <Button
            android:text="@string/enregistrer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/read"
            app:layout_constraintHorizontal_chainStyle="packed"/>
    <TextView
            android:text="@string/date_de_naissance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/name" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/date"
            app:layout_constraintHorizontal_chainStyle="spread" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/read"/>
    <TextView
            android:text="@string/jj_mm_aaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/name" app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/save"/>
    <Button
            android:text="@string/lire_fichier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/read" app:layout_constraintStart_toEndOf="@+id/save" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.5"
    />
</android.support.constraint.ConstraintLayout>