<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <TextView
            android:text="@string/title_activity_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title1" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:textSize="30sp"
            android:textStyle="bold" android:textAllCaps="false" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
            android:layout_width="224dp"
            android:layout_height="97dp" app:srcCompat="@drawable/isenlogo"
            android:id="@+id/logo"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:visibility="visible"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/title1"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/username" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/logo" android:hint="@string/prompt_email"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/password" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/username" android:hint="@string/prompt_password"/>
    <Button
            android:text="@string/valider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/connect" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/password" android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>
    <Button
            android:text="Reset Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/reset_password"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>