<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_home"
        tools:context=".HomeActivity">

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_notification_clear_all"
            android:id="@+id/disconnect" android:background="@android:drawable/screen_background_light_transparent"
            app:layout_anchorGravity="right|center" app:layout_anchor="@+id/appBarLayout" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
            android:layout_width="149dp"
            android:layout_height="73dp" app:srcCompat="@drawable/isenlogo"
            android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/stat_notify_sdcard"
            android:id="@+id/saved"
            app:layout_constraintStart_toEndOf="@+id/cyclevie" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/webservices"
            android:background="@drawable/ic_launcher_background" android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
            android:text="@string/permissions"
            android:layout_width="82dp"
            android:layout_height="22dp"
            android:id="@+id/textView5"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/permissions"
            app:layout_constraintEnd_toEndOf="@+id/permissions"
            app:layout_constraintStart_toStartOf="@+id/permissions"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/stat_sys_speakerphone"
            android:id="@+id/permissions"
            app:layout_constraintTop_toBottomOf="@+id/cyclevie"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/webservices"
            app:layout_constraintHorizontal_chainStyle="spread" android:background="@drawable/ic_launcher_background"/>
    <TextView
            android:text="@string/cycle_de_vie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/cyclevie"
            app:layout_constraintEnd_toEndOf="@+id/cyclevie"
            app:layout_constraintStart_toStartOf="@+id/cyclevie"/>
    <TextView
            android:text="@string/bonjour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintHorizontal_bias="0.5"
            android:textSize="24sp"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/stat_notify_chat"
            android:id="@+id/cyclevie"
            style="@android:style/Widget.DeviceDefault.ImageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/saved"
            app:layout_constraintBottom_toTopOf="@+id/permissions"
            android:background="@drawable/ic_launcher_background" android:layout_marginBottom="16dp"
            app:layout_constraintHorizontal_chainStyle="spread" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
            android:text="@string/sauvegarde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/saved"
            app:layout_constraintStart_toStartOf="@+id/saved"
            app:layout_constraintEnd_toEndOf="@+id/saved"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/stat_sys_download"
            android:id="@+id/webservices"
            app:layout_constraintTop_toBottomOf="@+id/saved"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/permissions" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:background="@drawable/ic_launcher_background"/>
    <TextView
            android:text="@string/webservices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/webservices"
            app:layout_constraintEnd_toEndOf="@+id/webservices"
            app:layout_constraintStart_toStartOf="@+id/webservices"/>

</android.support.constraint.ConstraintLayout>